fix year spacing

--- a/styles.css
+++ b/styles.css
@@ -75,10 +75,7 @@ hr {
   color: black;
   margin-left: 20px;
   text-transform: uppercase;
-}
-
-.year.last-year, .year.archive {
-  padding-top: 15px;
+  margin-top: 10px;
 }
 
 .project-title {
@@ -90,7 +87,7 @@ hr {
   color: black;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: larger;
+  font-size: medium;
   text-decoration: none;
   border-bottom: 1px solid blue;
 }
@@ -136,7 +133,7 @@ hr {
 
 .description {
   font-size: small;
-  margin: 25px 20px 25px 20px;
+  margin: 20px;
 }
 
 .footer {
